<resources>
    <string name="app_name">TCE Facility Request</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_btn">LOGIN</string>
    <string name="tce_facility_request_home_logo">TCE Facility Request Home Logo</string>
    <string name="tce_facility_request">TCE FACILITY REQUEST</string>
    <string name="google">Google</string>
    <string name="username">Username</string>
    <string name="user_mail">example@gmail.com</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="mail">example@gmail.com</string>
    <string name="menu">Menu</string>
    <string name="transport_request">Transport Request</string>
    <string name="auditorium_request">Auditorium Request</string>
    <string name="guest_house_request">Guest House Request</string>
    <string name="transport_request_head">Transport Request</string>
    <string name="name_of_the_requestor">Name of the Requestor</string>
    <string name="department">Department</string>
    <string name="phone_number">Phone number</string>
    <string name="event">Event</string>
    <string name="requested_date">Requested Date</string>
    <string name="trip_details">Trip Details</string>
    <string name="pickup_place">Pickup Place</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="drop_place">Drop Place</string>
    <string name="drop_time">Drop Time</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="select">SELECT</string>
</resources>